extends Button



func _on_pressed() -> void:
	get_tree().change_scene_to_file("res://1stmapsssss.tscn")





func _on_button_4_pressed() -> void:
	get_tree().change_scene_to_file("res://2ndmapssss.tscn")





func _on_button_5_pressed() -> void:
	get_tree().change_scene_to_file("res://3rdmapplss.tscn")






func _on_button_pressed() -> void:
	get_tree().change_scene_to_file("res://main_menu.tscn")
